# console-component

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  conanfile.py
.github/workflows/: build.yml  cpp.yml  default.yml  lint.yml
examples/http/: CMakeLists.txt  README.md  main.cpp
examples/http/commands/: fetch_data.cpp  fetch_data.h
examples/project1/: CMakeLists.txt  README.md  conanfile.txt  main.cpp
examples/project1/cmake/: CPM.cmake
examples/project1/commands/: copy_files.cpp  copy_files.h  hello_world.cpp  hello_world.h
examples/project2/: CMakeLists.txt  README.md  main.cpp
examples/project2/commands/: long_task.cpp  long_task.h
examples/todo/: .gitignore  CMakeLists.txt  README.md  main.cpp
examples/todo/commands/: copy_files.cpp  copy_files.h  hello_world.cpp  hello_world.h
src/: CMakeLists.txt  application.cpp  console_application.cpp  input.cpp  main.cpp  output.cpp  progress_bar.cpp
src/commands/: test_command.cpp  test_command.h
src/console/: application.h  input.h  output.h  progress_bar.h
src/console/interfaces/: application_interface.h  command_interface.h  input_interface.h  output_interface.h
src/console/types/: collections.h  colors.h
src/include/: command.h  console_application.h
src/include/console/: application.h  application_interface.h  command.h  input.h  input_interface.h  output.h  progress_bar.h
src/include/console/interfaces/: application_interface.h  command_interface.h  input_interface.h  output_interface.h
src/include/console/types/: collections.h  colors.h  exit_code.h  metadata.h
tests/: CMakeLists.txt  CMakeLists.txt.in  main.cpp
tests/unit/: application_test.cpp  example_test.cpp  input_test.cpp  output_test.cpp  parser_test.cpp
tests/unit/commands/greetings/: hey.cpp  hey.h  hi.cpp  hi.h
tests/unit/commands/todo/: list.cpp  list.h
